cmake_minimum_required(VERSION 3.0.2)
project(learn_compose)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
catkin_package(INCLUDE_DIRS include CATKIN_DEPENDS roscpp std_msgs)
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(intra_process_pubsub src/intra_process_pubsub.cpp src/talker.cpp src/listener.cpp)
target_link_libraries(intra_process_pubsub ${catkin_LIBRARIES})
install(TARGETS intra_process_pubsub RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
install(DIRECTORY include/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
