cmake_minimum_required(VERSION 3.0.2)
project(learn_dds_cpp)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs)
catkin_package(CATKIN_DEPENDS roscpp std_msgs)
include_directories(${catkin_INCLUDE_DIRS} include)
add_executable(shm_pub src/shm_pub.cpp)
add_dependencies(shm_pub ${catkin_EXPORTED_TARGETS})
target_link_libraries(shm_pub ${catkin_LIBRARIES})
install(TARGETS shm_pub RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
