cmake_minimum_required(VERSION 3.0.2)
project(learn_executor_cpp)
find_package(catkin REQUIRED COMPONENTS roscpp std_msgs std_srvs)
catkin_package(CATKIN_DEPENDS roscpp std_msgs std_srvs)
include_directories(${catkin_INCLUDE_DIRS} include)
add_executable(learn_executor src/learn_executor.cpp)
add_dependencies(learn_executor ${catkin_EXPORTED_TARGETS})
target_link_libraries(learn_executor ${catkin_LIBRARIES})
install(TARGETS learn_executor RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
