cmake_minimum_required(VERSION 3.0.2)
project(learn_managed_node_cpp)
find_package(catkin REQUIRED COMPONENTS roscpp std_srvs)
catkin_package(CATKIN_DEPENDS roscpp std_srvs)
include_directories(${catkin_INCLUDE_DIRS})
add_executable(learn_managed_node src/learn_managed_node.cpp)
add_dependencies(learn_managed_node ${catkin_EXPORTED_TARGETS})
target_link_libraries(learn_managed_node ${catkin_LIBRARIES})
install(TARGETS learn_managed_node RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
