<?xml version="1.0"?>
<package format="2">
  <name>learn_managed_node_py</name>
  <version>0.0.0</version>
  <description>ROS1 managed-node state machine demo in Python.</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>