cmake_minimum_required(VERSION 3.0.2)
project(learn_message_filter_cpp)
find_package(catkin REQUIRED COMPONENTS roscpp sensor_msgs nav_msgs message_filters)
catkin_package(CATKIN_DEPENDS roscpp sensor_msgs nav_msgs message_filters)
include_directories(${catkin_INCLUDE_DIRS} include)
add_executable(timesync_test src/timesync_test.cpp)
add_dependencies(timesync_test ${catkin_EXPORTED_TARGETS})
target_link_libraries(timesync_test ${catkin_LIBRARIES})
install(TARGETS timesync_test RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
