<?xml version="1.0"?>
<package format="2">
  <name>learn_message_filter_cpp</name>
  <version>0.0.0</version>
  <description>ROS1 message_filters demo</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

</package>