cmake_minimum_required(VERSION 3.0.2)
project(learn_queue_latch_cpp)
find_package(catkin REQUIRED COMPONENTS roscpp nav_msgs)
catkin_package(CATKIN_DEPENDS roscpp nav_msgs)
include_directories(${catkin_INCLUDE_DIRS} include)
add_executable(queue_latch_demo src/queue_latch_demo.cpp)
add_dependencies(queue_latch_demo ${catkin_EXPORTED_TARGETS})
target_link_libraries(queue_latch_demo ${catkin_LIBRARIES})
install(TARGETS queue_latch_demo RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
