<?xml version="1.0"?>
<package format="2">
  <name>learn_queue_latch_cpp</name>
  <version>0.0.0</version>
  <description>ROS1 queue and latched topic semantics demo in C++.</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>