<?xml version="1.0"?>
<package format="2">
  <name>learn_queue_latch_py</name>
  <version>0.0.0</version>
  <description>ROS1 queue and latched topic semantics demo in Python.</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
</package>