cmake_minimum_required(VERSION 3.0.2)
project(demo_cpp_pkg)
find_package(catkin REQUIRED COMPONENTS roscpp)
catkin_package()
include_directories(include ${catkin_INCLUDE_DIRS})
add_executable(cpp_node src/cpp_node.cpp)
add_executable(person_node src/person_node.cpp)
add_executable(learn_auto src/learn_auto.cpp)
add_executable(learn_shared_ptr src/learn_shared_ptr.cpp)
add_executable(learn_lambda src/learn_lambda.cpp)
add_executable(learn_function src/learn_function.cpp)
add_executable(learn_thread src/learn_thread.cpp)
foreach(t cpp_node person_node learn_auto learn_shared_ptr learn_lambda learn_function learn_thread)
  target_link_libraries(${t} ${catkin_LIBRARIES})
endforeach()
install(TARGETS cpp_node person_node learn_auto learn_shared_ptr learn_lambda learn_function learn_thread
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
install(DIRECTORY include/ DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
