<?xml version="1.0"?>
<package format="2">
  <name>demo_cpp_pkg</name>
  <version>0.0.0</version>
  <description>ROS1 demo cpp package</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>