cmake_minimum_required(VERSION 3.0.2)
project(status_display)
find_package(catkin REQUIRED COMPONENTS roscpp status_interfaces)
find_package(Qt5 REQUIRED COMPONENTS Widgets)
catkin_package(CATKIN_DEPENDS roscpp status_interfaces)
include_directories(${catkin_INCLUDE_DIRS})
add_executable(sys_status_display src/sys_status_display.cpp)
add_dependencies(sys_status_display ${catkin_EXPORTED_TARGETS})
target_link_libraries(sys_status_display ${catkin_LIBRARIES} Qt5::Widgets)
install(TARGETS sys_status_display RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
