<?xml version="1.0"?>
<package format="2">
  <name>status_publisher</name>
  <version>0.0.0</version>
  <description>ROS1 system status publisher</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>status_interfaces</build_depend>
  <exec_depend>status_interfaces</exec_depend>
</package>