cmake_minimum_required(VERSION 3.0.2)
project(demo_cpp_topic)
find_package(catkin REQUIRED COMPONENTS roscpp geometry_msgs turtlesim)
catkin_package(CATKIN_DEPENDS roscpp geometry_msgs turtlesim)
include_directories(${catkin_INCLUDE_DIRS})
add_executable(turtle_circle src/turtle_circle.cpp)
add_executable(turtle_control src/turtle_control.cpp)
foreach(t turtle_circle turtle_control)
  target_link_libraries(${t} ${catkin_LIBRARIES})
endforeach()
install(TARGETS turtle_circle turtle_control RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
