<?xml version="1.0"?>
<package format="2">
  <name>demo_cpp_topic</name>
  <version>0.0.0</version>
  <description>ROS1 topic demos</description>
  <maintainer email="87068644+fishros@users.noreply.github.com">fishros</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>turtlesim</build_depend>
  <exec_depend>turtlesim</exec_depend>
</package>